--- a/report/plots/precision.tex
+++ b/report/plots/precision.tex
@@ -1,5 +1,5 @@
 \begin{figure}[H]
-\begin{adjustbox}{width=\textwidth, center=\textwidth}
+\begin{adjustbox}{width=0.90\textwidth, center=\textwidth}
 \begin{tikzpicture}
 \begin{axis}[
     xbar stacked,
@@ -13,7 +13,7 @@
     %nodes near coords,
     %nodes near coords align={horizontal},
     bar width = 0.5cm,
-    xmax = 3.5,
+    xmax = 3.7,
     y dir = reverse,
     width=1.0\textwidth,
     ]
@@ -40,4 +40,5 @@
 \end{tikzpicture}
 \end{adjustbox}
 \caption{Classifiers Precision Graph}
+\label{nslprecision}
 \end{figure}
