--- a/report/plots/recall.tex
+++ b/report/plots/recall.tex
@@ -1,5 +1,5 @@
 \begin{figure}[H]
-\begin{adjustbox}{width=\textwidth, center=\textwidth}
+\begin{adjustbox}{width=0.9\textwidth, center=\textwidth}
 \begin{tikzpicture}
 \begin{axis}[
     xbar stacked,
@@ -39,4 +39,5 @@
 \end{tikzpicture}
 \end{adjustbox}
 \caption{Classifiers Recall Graph}
+\label{nslrecall}
 \end{figure}
