--- a/report/Dissertation-DP.tex
+++ b/report/Dissertation-DP.tex
@@ -10,8 +10,8 @@ Please sign your name below one of the options below to state your preference.\n
 \vspace{0.5cm}
 
 The University may make this dissertation, with indicative grade, available to others.\newline
-\vspace{3cm}
-
+\vspace{1cm}
+\includegraphics[width=0.4\textwidth, center]{figures/signature}
 
 The University may make this dissertation available to others, but the grade may not be disclosed.\newline
 \vspace{3cm}
