--- a/report/Dissertation-LR.tex
+++ b/report/Dissertation-LR.tex
@@ -95,6 +95,9 @@ This basic form of neural network is also called a feed forward neural network (
 	
 	This method of intrusion detection through the use of the negative selection algorithm has been implemented in a number of papers to great effect. \cite{powers2008hybrid} shows that the negative selection algorithm evolved using a genetic algorithm can acheive detection rates of up to 98\%. \cite{dasgupta2002immunity} found similar results similarly using a genetic algorithm with a self detection rate of 96\% and a non-self detection rate of up to 86\%. This demonstrates that negative selection is an effective and viable method of network intrusion detection.
 	
+\subsection{Support Vector Machine}
+TODO
+
 	\subsection{Research Contribution} \label{Research Contribution}
 	
 During this dissertation the there are a number of goals which are aimed to be met and questions answered in order to ultimatley contribute to the research of network intrusion detection is some way. The main question which is to be answered is what is the difference in performance between a single stage classifier and a two stage classifier in the context of network intrusion detection, and to determine what the configuration of machine learning classifiers discussed within this project produces the highest accuracy network intrusion detection and classification of intrusive network connections, where accuracy is defined as a high number of true positives and a low number of false positives.
@@ -104,6 +107,8 @@ During this dissertation the there are a number of goals which are aimed to be m
 	The project will achieve that goal in the following manner: A number of machine learning algorithms will be chosen to be implemented, i.e. k-nearest neighbors, artificial neural networks, and negative selection. These algorithms will be housed by a peice of software which will be written to run them, obtain metrics and display information on the performance of each algorithm, in the form of tables and graphs, etc. Once this information has been extracted from each algorithm, an analysis and evauluation will be performed on the accuracy of each method, and a conclusion drawn.
 		
 	\subsection{Dataset}
+	TODO: Change to NSLKDD and UNSWNB15
+
 	The dataset which was to perform the evaluation of the network intrusion detection methods is the KDD Cup 1999 dataset. This dataset comes from the Third International Knowledge Discovery and Data Mining Tools Competition and is based on data captured in the DARPA'98 IDS evaluation program \cite{Lippmann2000darpa}, \cite{tavallaee2009detailed}. 
 	
 	This dataset has been widely criticized by researchers and experts due to several factors such as; having a large number of redundant records \textit{"which  cause  the  learning  algorithm  to  be  biased  towards  the  most  frequent  records,  thus  prevent  it  from  recognizing  rare  attack  records"} \cite{panda2012hybrid} , and in \cite{vasudevan2011ssenet}, for being outdated meaning that it does not account for new developments in network attacks. This is not of concern during this project as the dataset is used purely as a proof of concept and will not be deployed into an actual network intrusion detection role. There are other datasets which have been proposed for use such as the NSL-KDD which is a revised version of the KDD99 dataset which has been shown to have eliminated many of the faults of the KDD99 dataset while also achieving better performance in the training of network intrusion detection systems \cite{dhanabal2015study}. While all of the criticisms against the KDD Cup 1999 dataset are well founded and a legitimate cause for concern it has been chosen as it is the single most used dataset and researched dataset in the entire network intrusion detection field. With this large amount of research having been performed on this dataset the results from such studies can be used as confirmation that the algorithms which are to be implemented are performing correctly, and also can be used to make an accurate comparisons of results. The KDD Cup 99 dataset also has a version released which has all redundant entries removed while maintaining the correct ratio of non-intrusive entries to attacks, allowing for much faster training of algorithms and collection of data, which is a priority as there is a time constraint which must be followed during this project.
