--- a/report/tables/UNSWf1score.tex
+++ b/report/tables/UNSWf1score.tex
@@ -1,6 +1,6 @@
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
-\begin{table}[]
+\begin{table}[H]
 \centering
 \caption{UNSW-NB15 Classifiers f1-Score Table}
 \label{unswf1table}
